Fase 4 completada: CRUD (GET, POST, PUT, DELETE) probado en Postman