@@ -4,42 +4,45 @@ import com.josesaa12.myitems.backend.dto.AccountHolderRequest;
 import com.josesaa12.myitems.backend.dto.AccountHolderResponse;
 import com.josesaa12.myitems.backend.model.AccountHolder;
 
-import java.util.Arrays;
-import java.util.List;
+import java.util.*;
 import java.util.stream.Collectors;
 
-public class AccountHolderMapper {
+public final class AccountHolderMapper {
+
+    private AccountHolderMapper() {}
 
     public static AccountHolderResponse toResponse(AccountHolder e) {
         AccountHolderResponse r = new AccountHolderResponse();
         r.setId(e.getId());
         r.setName(e.getName());
         r.setDescription(e.getDescription());
-        r.setTags(csvToList(e.getTagsCsv()));
+        r.setTags(splitCsv(e.getTagsCsv()));
         r.setCreatedAt(e.getCreatedAt());
         r.setUpdatedAt(e.getUpdatedAt());
         return r;
     }
 
-    public static void apply(AccountHolder e, AccountHolderRequest rq) {
-        e.setName(rq.getName());
-        e.setDescription(rq.getDescription());
-        e.setTagsCsv(listToCsv(rq.getTags()));
+    public static void apply(AccountHolder e, AccountHolderRequest req) {
+        e.setName(req.getName());
+        e.setDescription(req.getDescription());
+        e.setTagsCsv(joinCsv(req.getTags()));
     }
 
-    private static List<String> csvToList(String csv) {
-        if (csv == null || csv.isBlank()) return List.of();
+    // --- helpers ---
+    private static List<String> splitCsv(String csv) {
+        if (csv == null || csv.isBlank()) return Collections.emptyList();
         return Arrays.stream(csv.split(","))
                 .map(String::trim)
-                .filter(s -> !s.isBlank())
-                .toList();
+                .filter(s -> !s.isEmpty())
+                .collect(Collectors.toList());
     }
 
-    private static String listToCsv(List<String> list) {
-        if (list == null || list.isEmpty()) return null;
-        return list.stream()
-                .map(String::trim)
-                .filter(s -> !s.isBlank())
+    private static String joinCsv(List<String> tags) {
+        if (tags == null || tags.isEmpty()) return null;
+        return tags.stream()
+                .map(s -> s == null ? "" : s.trim())
+                .filter(s -> !s.isEmpty())
+                .distinct()
                 .collect(Collectors.joining(","));
     }
 }
